# generate-requirements

./: README.md  generate_requirements.py  pyproject.toml
src/python_deps_generator/: cli.py
src/python_deps_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
