[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-deps-generator"
version = "0.1.0"
description = "A tool to automatically detect Python project dependencies and generate requirements.txt"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.scripts]
generate-deps = "python_deps_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/python_deps_generator"]